--- a/code/08.letter.ipynb
+++ b/code/08.letter.ipynb
@@ -1,53 +1,27 @@
 {
  "cells": [
   {
+   "outputs": [],
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "5c4e2214-a4dc-40a5-8e3a-5cbcca0a6fc1",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n",
-      "4\n"
-     ]
-    }
-   ],
    "source": [
     "# `Char`s are concrete, so they always occupy 4 bytes (this is why an empty `Char` '' can not exist).\n",
     "\n",
     "println(sizeof(Char))\n",
     "\n",
     "println(sizeof('a'))"
-   ]
+   ],
+   "id": "5c4e2214-a4dc-40a5-8e3a-5cbcca0a6fc1",
+   "metadata": {},
+   "execution_count": null
   },
   {
+   "outputs": [],
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "f4678c7e-a7ff-443e-b2e5-245d15449b69",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Type Array does not have a definite size.\n",
-      "Type String does not have a definite size.\n",
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "9\n"
-     ]
-    }
-   ],
    "source": [
     "# On the other hand, `String`s are mutable in size, like `Array`s.\n",
     "\n",
     "for ty in (Array, String)\n",
-    "    \n",
+    "\n",
     "    try\n",
     "\n",
     "        sizeof(ty)\n",
@@ -57,28 +31,22 @@
     "        println(er.msg)\n",
     "\n",
     "    end\n",
-    "    \n",
+    "\n",
     "end\n",
     "\n",
-    "for st in (\n",
-    "    \"\",\n",
-    "    \"a\",\n",
-    "    \"aa\",\n",
-    "    \"aaa\",\n",
-    "    \"aaaaaaaaa\",\n",
-    ")\n",
-    "    \n",
+    "for st in (\"\", \"a\", \"aa\", \"aaa\", \"aaaaaaaaa\")\n",
+    "\n",
     "    println(sizeof(st))\n",
     "\n",
     "end"
-   ]
+   ],
+   "id": "f4678c7e-a7ff-443e-b2e5-245d15449b69",
+   "metadata": {},
+   "execution_count": null
   },
   {
-   "cell_type": "code",
-   "execution_count": 63,
-   "id": "e02e8357-8160-477c-b7c8-0c025087cd98",
-   "metadata": {},
    "outputs": [],
+   "cell_type": "code",
    "source": [
     "# The compiler simplifies code, and benchmarking small code is tricky and may not reflect what happens when the code is part of another code.\n",
     "# Perhaps because `Char`s have a fixed length, they are faster to work with than `String`s.\n",
@@ -87,60 +55,38 @@
     "\n",
     "@btime \"a\"\n",
     "\n",
-    "for (xs, ys) in ((\n",
-    "        ('a', 'c', 'e'), ('a', 'b', 'c', 'd', 'e')),\n",
-    "        ((\"a\", \"c\", \"e\"),(\"a\", \"b\", \"c\", \"d\", \"e\")),\n",
-    "    )\n",
+    "for (xs, ys) in\n",
+    "    ((('a', 'c', 'e'), ('a', 'b', 'c', 'd', 'e')), ((\"a\", \"c\", \"e\"), (\"a\", \"b\", \"c\", \"d\", \"e\")))\n",
     "\n",
     "    @btime all(x in ys for x in xs)\n",
-    "    \n",
+    "\n",
     "    @btime all(x in $ys for x in $xs)\n",
-    "    \n",
+    "\n",
     "end"
-   ]
+   ],
+   "id": "e02e8357-8160-477c-b7c8-0c025087cd98",
+   "metadata": {},
+   "execution_count": null
   },
   {
+   "outputs": [],
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "e43ecd00-eb8d-43d3-9411-84121411c3db",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  78.216 ns (0 allocations: 0 bytes)\n",
-      "  77.534 ns (0 allocations: 0 bytes)\n"
-     ]
-    }
-   ],
    "source": [
     "# It is okay to not 100% understanding what goes on in a benchmark.\n",
     "\n",
-    "@btime all(x in ys for x in xs) setup=(xs=('a', 'c', 'e'), ys=('a', 'b', 'c', 'd', 'e'))\n",
+    "@btime all(x in ys for x in xs) setup = (xs = ('a', 'c', 'e'), ys = ('a', 'b', 'c', 'd', 'e'))\n",
     "\n",
-    "@btime all(x in ys for x in xs) setup=(xs=(\"a\", \"c\", \"e\"), ys=(\"a\", \"b\", \"c\", \"d\", \"e\"))\n",
+    "@btime all(x in ys for x in xs) setup = (xs = (\"a\", \"c\", \"e\"), ys = (\"a\", \"b\", \"c\", \"d\", \"e\"))\n",
     "\n",
     ";"
-   ]
+   ],
+   "id": "e43ecd00-eb8d-43d3-9411-84121411c3db",
+   "metadata": {},
+   "execution_count": null
   },
   {
+   "outputs": [],
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "23635d58-2b49-4864-85ab-2fb11d0e6ba9",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  13.179 ns (1 allocation: 24 bytes)\n",
-      "  14.822 ns (1 allocation: 24 bytes)\n",
-      "  13.180 ns (1 allocation: 24 bytes)\n",
-      "  14.807 ns (1 allocation: 24 bytes)\n"
-     ]
-    }
-   ],
    "source": [
     "aa = \"Aa\"\n",
     "\n",
@@ -155,31 +101,34 @@
     "@btime \"$($aa) $($bb)\"\n",
     "\n",
     ";"
-   ]
+   ],
+   "id": "23635d58-2b49-4864-85ab-2fb11d0e6ba9",
+   "metadata": {},
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
-   "id": "09ef46dd-4fcb-4591-a16a-4f2243cf72fc",
-   "metadata": {},
    "source": [
     "Pick `string` or interpolation based on your style, and stick to it.\n",
     "(I like interpolation.)"
-   ]
+   ],
+   "id": "09ef46dd-4fcb-4591-a16a-4f2243cf72fc",
+   "metadata": {}
   }
  ],
+ "nbformat_minor": 5,
  "metadata": {
-  "kernelspec": {
-   "display_name": "Julia 1.8.3",
-   "language": "julia",
-   "name": "julia-1.8"
-  },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
    "version": "1.8.3"
+  },
+  "kernelspec": {
+   "name": "julia-1.8",
+   "display_name": "Julia 1.8.3",
+   "language": "julia"
   }
  },
- "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat": 4
 }
