--- a/code/01.benchmark.ipynb
+++ b/code/01.benchmark.ipynb
@@ -2,8 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0a24eeb4-3c7c-4e31-a669-6685dfc10762",
-   "metadata": {},
    "source": [
     "Benchmarking is;\n",
     "\n",
@@ -26,32 +24,31 @@
     "    \n",
     "end\n",
     "```"
-   ]
+   ],
+   "id": "0a24eeb4-3c7c-4e31-a669-6685dfc10762",
+   "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6f108dbd-47c5-486e-9e52-c803accb4b1e",
-   "metadata": {},
    "outputs": [],
+   "cell_type": "code",
    "source": [
     "function make_nu_()\n",
-    "    \n",
+    "\n",
     "    rand(10^2)\n",
-    "    \n",
+    "\n",
     "end\n",
     "\n",
     "nu_ = make_nu_()\n",
     "\n",
     ";"
-   ]
+   ],
+   "id": "6f108dbd-47c5-486e-9e52-c803accb4b1e",
+   "metadata": {},
+   "execution_count": null
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3e04bb62-3cd4-4fdb-ac25-5ff5a5cb4537",
-   "metadata": {},
    "outputs": [],
+   "cell_type": "code",
    "source": [
     "# The same `nu_` is sorted inplace everytime.\n",
     "# So it is actually sorted only once during the first one.\n",
@@ -59,51 +56,54 @@
     "@btime sort!($nu_)\n",
     "\n",
     "@benchmark sort!($nu_)"
-   ]
+   ],
+   "id": "3e04bb62-3cd4-4fdb-ac25-5ff5a5cb4537",
+   "metadata": {},
+   "execution_count": null
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1a792184-be21-4f8f-a967-1040fa910990",
-   "metadata": {},
    "outputs": [],
+   "cell_type": "code",
    "source": [
     "# Each sampling sets up a new `nu_`.\n",
     "# But it is sorted only during the first evaluation.\n",
     "\n",
-    "@btime sort!(nus_) setup=(nus_=make_nu_())\n",
+    "@btime sort!(nus_) setup = (nus_ = make_nu_())\n",
     "\n",
-    "@benchmark sort!(nus_) setup=(nus_=make_nu_())"
-   ]
+    "@benchmark sort!(nus_) setup = (nus_ = make_nu_())"
+   ],
+   "id": "1a792184-be21-4f8f-a967-1040fa910990",
+   "metadata": {},
+   "execution_count": null
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d57a674f-5bd1-4dfb-9078-5154da04ea33",
-   "metadata": {},
    "outputs": [],
+   "cell_type": "code",
    "source": [
     "# Each sampling sets up a new `nu_` and there is only one evaluation.\n",
     "\n",
-    "@btime sort!(nus_) setup=(nus_=make_nu_()) evals=1\n",
+    "@btime sort!(nus_) setup = (nus_ = make_nu_()) evals = 1\n",
     "\n",
-    "@benchmark sort!(nus_) setup=(nus_=make_nu_()) evals=1"
-   ]
+    "@benchmark sort!(nus_) setup = (nus_ = make_nu_()) evals = 1"
+   ],
+   "id": "d57a674f-5bd1-4dfb-9078-5154da04ea33",
+   "metadata": {},
+   "execution_count": null
   }
  ],
+ "nbformat_minor": 5,
  "metadata": {
-  "kernelspec": {
-   "display_name": "Julia 1.8.3",
-   "language": "julia",
-   "name": "julia-1.8"
-  },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
    "version": "1.8.3"
+  },
+  "kernelspec": {
+   "name": "julia-1.8",
+   "display_name": "Julia 1.8.3",
+   "language": "julia"
   }
  },
- "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat": 4
 }
