--- a/code/11.fill.ipynb
+++ b/code/11.fill.ipynb
@@ -1,36 +1,22 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "2e6269ab-cb15-4541-9fb0-80f554c631c7",
-   "metadata": {},
    "outputs": [],
+   "cell_type": "code",
    "source": [
     "n = 10^2\n",
     "\n",
     "si = (n, n)\n",
     "\n",
     ";"
-   ]
+   ],
+   "id": "2e6269ab-cb15-4541-9fb0-80f554c631c7",
+   "metadata": {},
+   "execution_count": null
   },
   {
+   "outputs": [],
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "de9b3e7d-ea4a-4ce9-b269-97819e469b4a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  33.064 ns (1 allocation: 896 bytes)\n",
-      "  32.495 ns (1 allocation: 896 bytes)\n",
-      "  851.667 ns (2 allocations: 78.17 KiB)\n",
-      "  843.750 ns (2 allocations: 78.17 KiB)\n"
-     ]
-    }
-   ],
    "source": [
     "@btime fill(0.0, $n)\n",
     "\n",
@@ -41,25 +27,14 @@
     "@btime zeros($si)\n",
     "\n",
     ";"
-   ]
+   ],
+   "id": "de9b3e7d-ea4a-4ce9-b269-97819e469b4a",
+   "metadata": {},
+   "execution_count": null
   },
   {
+   "outputs": [],
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "c3b7073e-8286-49e4-8299-7a18ac9a4a62",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  32.655 ns (1 allocation: 896 bytes)\n",
-      "  32.663 ns (1 allocation: 896 bytes)\n",
-      "  828.667 ns (2 allocations: 78.17 KiB)\n",
-      "  851.107 ns (2 allocations: 78.17 KiB)\n"
-     ]
-    }
-   ],
    "source": [
     "@btime fill(0, $n)\n",
     "\n",
@@ -70,25 +45,14 @@
     "@btime zeros(Int, $si)\n",
     "\n",
     ";"
-   ]
+   ],
+   "id": "c3b7073e-8286-49e4-8299-7a18ac9a4a62",
+   "metadata": {},
+   "execution_count": null
   },
   {
+   "outputs": [],
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "e32d1ef5-5b3e-401e-828e-a52c428ab35f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  32.035 ns (1 allocation: 896 bytes)\n",
-      "  31.993 ns (1 allocation: 896 bytes)\n",
-      "  1.125 μs (2 allocations: 78.17 KiB)\n",
-      "  1.100 μs (2 allocations: 78.17 KiB)\n"
-     ]
-    }
-   ],
    "source": [
     "@btime fill(1.0, $n)\n",
     "\n",
@@ -99,25 +63,14 @@
     "@btime ones($si)\n",
     "\n",
     ";"
-   ]
+   ],
+   "id": "e32d1ef5-5b3e-401e-828e-a52c428ab35f",
+   "metadata": {},
+   "execution_count": null
   },
   {
+   "outputs": [],
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "1e038758-cc6e-470c-ad42-7f207c7f009e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  32.538 ns (1 allocation: 896 bytes)\n",
-      "  33.300 ns (1 allocation: 896 bytes)\n",
-      "  1.183 μs (2 allocations: 78.17 KiB)\n",
-      "  1.141 μs (2 allocations: 78.17 KiB)\n"
-     ]
-    }
-   ],
    "source": [
     "@btime fill(1, $n)\n",
     "\n",
@@ -128,32 +81,35 @@
     "@btime ones(Int, $si)\n",
     "\n",
     ";"
-   ]
+   ],
+   "id": "1e038758-cc6e-470c-ad42-7f207c7f009e",
+   "metadata": {},
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
-   "id": "de0364df-6aa4-439e-aa39-2454501b160d",
-   "metadata": {},
    "source": [
     "Use more speicfic `zeros` and `ones` instead of `fill` to make an array.\n",
     "\n",
     "Pre-allocating and using `fill!` is even better."
-   ]
+   ],
+   "id": "de0364df-6aa4-439e-aa39-2454501b160d",
+   "metadata": {}
   }
  ],
+ "nbformat_minor": 5,
  "metadata": {
-  "kernelspec": {
-   "display_name": "Julia 1.8.3",
-   "language": "julia",
-   "name": "julia-1.8"
-  },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
    "version": "1.8.3"
+  },
+  "kernelspec": {
+   "name": "julia-1.8",
+   "display_name": "Julia 1.8.3",
+   "language": "julia"
   }
  },
- "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat": 4
 }
