--- a/code/16.generators_and_specific_functions.ipynb
+++ b/code/16.generators_and_specific_functions.ipynb
@@ -1,33 +1,20 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "2a4ab9b1-e0a3-45f1-a18b-0ee3ebe23617",
-   "metadata": {},
    "outputs": [],
+   "cell_type": "code",
    "source": [
     "an_ = rand((0, 1, missing), 10^3)\n",
     "\n",
     ";"
-   ]
+   ],
+   "id": "2a4ab9b1-e0a3-45f1-a18b-0ee3ebe23617",
+   "metadata": {},
+   "execution_count": null
   },
   {
+   "outputs": [],
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "6591c028-81cb-41c4-a138-2f04f38ec9dd",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  1.962 μs (6 allocations: 7.61 KiB)\n",
-      "  572.346 ns (4 allocations: 7.09 KiB)\n",
-      "  573.714 ns (4 allocations: 7.09 KiB)\n"
-     ]
-    }
-   ],
    "source": [
     "# Generators are usually great.\n",
     "@btime findall(ismissing(an) for an in $an_)\n",
@@ -40,22 +27,25 @@
     "@btime findall(ismissing, $an_)\n",
     "\n",
     ";"
-   ]
+   ],
+   "id": "6591c028-81cb-41c4-a138-2f04f38ec9dd",
+   "metadata": {},
+   "execution_count": null
   }
  ],
+ "nbformat_minor": 5,
  "metadata": {
-  "kernelspec": {
-   "display_name": "Julia 1.8.3",
-   "language": "julia",
-   "name": "julia-1.8"
-  },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
    "version": "1.8.3"
+  },
+  "kernelspec": {
+   "name": "julia-1.8",
+   "display_name": "Julia 1.8.3",
+   "language": "julia"
   }
  },
- "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat": 4
 }
