--- a/code/24.bitvector.ipynb
+++ b/code/24.bitvector.ipynb
@@ -1,31 +1,8 @@
 {
  "cells": [
   {
+   "outputs": [],
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "a7428674-5603-4250-a402-8bf227a1f344",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(Vector{Bool}, DenseVector{Bool}, AbstractVector{Bool}, Any)\n",
-      "1000\n",
-      "  27.485 ns (0 allocations: 0 bytes)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "497"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "bo_ = rand((false, true), 10^3)\n",
     "\n",
@@ -34,34 +11,14 @@
     "println(sizeof(bo_))\n",
     "\n",
     "@btime sum($bo_)"
-   ]
+   ],
+   "id": "a7428674-5603-4250-a402-8bf227a1f344",
+   "metadata": {},
+   "execution_count": null
   },
   {
+   "outputs": [],
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "51ac6e34-c447-4a3f-99a4-1c3d6be8b5fb",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(BitVector, AbstractVector{Bool}, Any)\n",
-      "128\n",
-      "  4.875 ns (0 allocations: 0 bytes)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "490"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "bi_ = BitVector(bo_)\n",
     "\n",
@@ -70,30 +27,33 @@
     "println(sizeof(bi_))\n",
     "\n",
     "@btime sum($bi_)"
-   ]
+   ],
+   "id": "51ac6e34-c447-4a3f-99a4-1c3d6be8b5fb",
+   "metadata": {},
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
-   "id": "a74510b3-cb8f-4bc8-a477-774a47221055",
-   "metadata": {},
    "source": [
     "Making `BitVector` takes more time but it is smaller and faster to operate on."
-   ]
+   ],
+   "id": "a74510b3-cb8f-4bc8-a477-774a47221055",
+   "metadata": {}
   }
  ],
+ "nbformat_minor": 5,
  "metadata": {
-  "kernelspec": {
-   "display_name": "Julia 1.8.3",
-   "language": "julia",
-   "name": "julia-1.8"
-  },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
    "version": "1.8.3"
+  },
+  "kernelspec": {
+   "name": "julia-1.8",
+   "display_name": "Julia 1.8.3",
+   "language": "julia"
   }
  },
- "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat": 4
 }
