--- a/code/01.benchmark.ipynb
+++ b/code/01.benchmark.ipynb
@@ -3,6 +3,8 @@
   {
    "cell_type": "markdown",
    "source": [
+    "@btime does not measure compilation time.\n",
+    "\n",
     "Benchmarking is;\n",
     "\n",
     "```julia\n",
@@ -25,7 +27,7 @@
     "end\n",
     "```"
    ],
-   "id": "0a24eeb4-3c7c-4e31-a669-6685dfc10762",
+   "id": "c498ef68-40b7-49bc-aecc-f7405f86b7b8",
    "metadata": {}
   },
   {
