--- a/code/28.dataframe_function.ipynb
+++ b/code/28.dataframe_function.ipynb
@@ -55,9 +55,7 @@
     "\n",
     "@btime select!(da, :, :Grade => plus_one, renamecols = false) setup = (da = copy(ro_x_co_x_an))\n",
     "\n",
-    "@btime (da.Grade = plus_one(da.Grade); da) setup = (da = copy(ro_x_co_x_an)) evals = 1;\n",
-    "\n",
-    ""
+    "@btime (da.Grade = plus_one(da.Grade); da) setup = (da = copy(ro_x_co_x_an)) evals = 1;"
    ],
    "id": "4eec9d50-f8d1-4b4b-981a-b904cb9e9d22",
    "metadata": {},
@@ -77,9 +75,7 @@
     "@btime select!(da, :, :Grade => ByRow(plus_one), renamecols = false) setup =\n",
     "    (da = copy(ro_x_co_x_an))\n",
     "\n",
-    "@btime (da.Grade = plus_one.(da.Grade); da) setup = (da = copy(ro_x_co_x_an)) evals = 1;\n",
-    "\n",
-    ""
+    "@btime (da.Grade = plus_one.(da.Grade); da) setup = (da = copy(ro_x_co_x_an)) evals = 1;"
    ],
    "id": "8de6a7e4-337a-4e0b-b0cf-75d93394167e",
    "metadata": {},
