Posted about Expr

--- a/code/08.letter.ipynb
+++ b/code/08.letter.ipynb
@@ -109,7 +109,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Pick `string` or interpolation based on your style, and stick to it.\n",
+    "Interpolation calls `string`.\n",
+    "Pick interpolation or `string` based on your style and stick to it.\n",
     "(I like interpolation.)"
    ],
    "id": "09ef46dd-4fcb-4591-a16a-4f2243cf72fc",
