--- a/code/29.macro.ipynb
+++ b/code/29.macro.ipynb
@@ -3,12 +3,49 @@
   {
    "cell_type": "markdown",
    "source": [
-    "`quote` makes a `begin` block, which is an `Expr`.\n",
-    "An `Expr` stores expressions, evaluation of which returns the last `return` object.\n",
+    "`quote` block makes a `begin` block, which is an `Expr`.\n",
+    "An `Expr` stores expressions, evaluation of which returns the last `return` object."
+   ],
+   "id": "694ab7e5-8551-4341-80fc-a61856c4c923",
+   "metadata": {}
+  },
+  {
+   "outputs": [],
+   "cell_type": "code",
+   "source": [
+    "ex = :(println(\"Calculating...\"); 1 + 2)\n",
     "\n",
+    "println(typeof(ex))\n",
+    "\n",
+    "eval(ex)"
+   ],
+   "id": "97e169c7-39bd-4947-8281-722ccbb5ea4f",
+   "metadata": {},
+   "execution_count": null
+  },
+  {
+   "outputs": [],
+   "cell_type": "code",
+   "source": [
+    "ex = quote\n",
+    "    println(\"Calculating...\")\n",
+    "    1 + 2\n",
+    "end\n",
+    "\n",
+    "println(typeof(ex))\n",
+    "\n",
+    "eval(ex)"
+   ],
+   "id": "0d1d8503-947b-497e-a801-10025f2a2865",
+   "metadata": {},
+   "execution_count": null
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "Just as `\"$va\"` interpolates `va` in the process of making a `String`, `$` interpolates variables in the process of making an `Expr`."
    ],
-   "id": "8501c462-dbb7-4432-bcaa-5a8545233b73",
+   "id": "2c251f7d-58f8-4d93-94c0-1eb77817207c",
    "metadata": {}
   },
   {
@@ -40,21 +77,6 @@
    "outputs": [],
    "cell_type": "code",
    "source": [
-    "# This `Expr` plans to use `va`, which will be defined to be 8.\n",
-    "qu = quote\n",
-    "    1 + 2\n",
-    "    3 * va\n",
-    "end\n",
-    "println(qu, \" IS A \", typeof(qu), \" AND EVALUATES TO \", eval(qu))"
-   ],
-   "id": "0a36539d-f8d0-44d7-93da-26e78e292737",
-   "metadata": {},
-   "execution_count": null
-  },
-  {
-   "outputs": [],
-   "cell_type": "code",
-   "source": [
     "try\n",
     "    # This `Expr` interpolates `no`, which has not been defined.\n",
     "    quote\n",
@@ -66,6 +88,29 @@
     "end"
    ],
    "id": "8a31b12a-8e63-4caf-8cd2-c329fdb33119",
+   "metadata": {},
+   "execution_count": null
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Every expression contained within an `Expr` must be able to execute."
+   ],
+   "id": "5abeaae8-b3b4-46cb-ba21-8d32c4d7ef63",
+   "metadata": {}
+  },
+  {
+   "outputs": [],
+   "cell_type": "code",
+   "source": [
+    "# This `Expr` plans to use `va`, which will be defined to be 8.\n",
+    "qu = quote\n",
+    "    1 + 2\n",
+    "    3 * va\n",
+    "end\n",
+    "println(qu, \" IS A \", typeof(qu), \" AND EVALUATES TO \", eval(qu))"
+   ],
+   "id": "0a36539d-f8d0-44d7-93da-26e78e292737",
    "metadata": {},
    "execution_count": null
   },
@@ -264,6 +309,85 @@
     ")"
    ],
    "id": "42d0a1de-b45d-4dba-b5ed-1be76a88469e",
+   "metadata": {},
+   "execution_count": null
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "First, variables within a macro result are classified as either local or global. A variable is considered local if it is assigned to (and not declared global), declared local, or used as a function argument name. Otherwise, it is considered global. Local variables are then renamed to be unique (using the gensym function, which generates new symbols), and global variables are resolved within the macro definition environment. "
+   ],
+   "id": "1b9f66b9-b228-4530-8147-932afa75e454",
+   "metadata": {}
+  },
+  {
+   "outputs": [],
+   "cell_type": "code",
+   "source": [
+    "variable = \"Important information\"\n",
+    "\n",
+    "macro ma(ex)\n",
+    "    quote\n",
+    "        variable = \"LOL\"\n",
+    "        $ex\n",
+    "    end\n",
+    "end\n",
+    "@ma 1 + 2\n",
+    "variable"
+   ],
+   "id": "cffffe84-4d1a-4bbd-a34c-a3e1c085f415",
+   "metadata": {},
+   "execution_count": null
+  },
+  {
+   "outputs": [],
+   "cell_type": "code",
+   "source": [
+    "variable = \"Important information\"\n",
+    "\n",
+    "macro ma(ex)\n",
+    "    esc(quote\n",
+    "        variable = \"LOL\"\n",
+    "        $ex\n",
+    "    end)\n",
+    "end\n",
+    "@ma 1 + 2\n",
+    "variable"
+   ],
+   "id": "3f542043-6ed1-4d3c-a5f4-9d98d4fbb610",
+   "metadata": {},
+   "execution_count": null
+  },
+  {
+   "outputs": [],
+   "cell_type": "code",
+   "source": [
+    "va = 1\n",
+    "macro zero_variable(ex)\n",
+    "    esc(:(va = 0; $ex))\n",
+    "end\n",
+    "println(@zero_variable 1 + 2)\n",
+    "va"
+   ],
+   "id": "d9302953-8385-4988-97a7-7f8ce1db85f8",
+   "metadata": {},
+   "execution_count": null
+  },
+  {
+   "outputs": [],
+   "cell_type": "code",
+   "source": [
+    "va = 1\n",
+    "macro zero_variable(ex)\n",
+    "    esc(quote\n",
+    "        va = 0\n",
+    "        $ex\n",
+    "    end)\n",
+    "end\n",
+    "println(@zero_variable 1 + 2)\n",
+    "va"
+   ],
+   "id": "948d21a2-be1d-424d-962b-107002b0ab8a",
    "metadata": {},
    "execution_count": null
   }
