--- a/code/29.macro.ipynb
+++ b/code/29.macro.ipynb
@@ -146,9 +146,9 @@
    "outputs": [],
    "cell_type": "code",
    "source": [
-    "macro ma(ex)\n",
-    "    # This `Expr` is `ex`, which is interpolated.\n",
-    "    ex\n",
+    "macro ma(ex2)\n",
+    "    # This `Expr` is `ex2`, which is interpolated.\n",
+    "    ex2\n",
     "end\n",
     "println(\n",
     "    (@macroexpand @ma 1 + 2),\n",
@@ -156,8 +156,9 @@
     "    typeof(@macroexpand @ma 1 + 2),\n",
     "    \" THAT EVALUATES TO \",\n",
     "    (@ma 1 + 2),\n",
-    "    \" OF TYPE \",\n",
+    "    \" (\",\n",
     "    typeof(@ma 1 + 2),\n",
+    "    \")\",\n",
     ")"
    ],
    "id": "c68ff97e-61c8-4db0-889b-1fa14cff2e17",
@@ -168,10 +169,10 @@
    "outputs": [],
    "cell_type": "code",
    "source": [
-    "macro ma(ex)\n",
-    "    # This `Expr` contains `ex`, which will be interpolated.\n",
+    "macro ma(ex2)\n",
+    "    # This `Expr` contains `ex2`, which will be interpolated.\n",
     "    quote\n",
-    "        ex\n",
+    "        ex2\n",
     "    end\n",
     "end\n",
     "try\n",
@@ -181,8 +182,9 @@
     "        typeof(@macroexpand @ma 1 + 2),\n",
     "        \" THAT EVALUATES TO \",\n",
     "        (@ma 1 + 2),\n",
-    "        \" OF TYPE \",\n",
+    "        \" (\",\n",
     "        typeof(@ma 1 + 2),\n",
+    "        \")\",\n",
     "    )\n",
     "catch er\n",
     "    println(er)\n",
@@ -196,10 +198,10 @@
    "outputs": [],
    "cell_type": "code",
    "source": [
-    "macro ma(ex)\n",
-    "    # This `Expr` contains `ex`, which is interpolated.\n",
+    "macro ma(ex2)\n",
+    "    # This `Expr` contains `ex2`, which is interpolated.\n",
     "    quote\n",
-    "        $ex\n",
+    "        $ex2\n",
     "    end\n",
     "end\n",
     "println(\n",
@@ -208,8 +210,9 @@
     "    typeof(@macroexpand @ma 1 + 2),\n",
     "    \" THAT EVALUATES TO \",\n",
     "    (@ma 1 + 2),\n",
-    "    \" OF TYPE \",\n",
+    "    \" (\",\n",
     "    typeof(@ma 1 + 2),\n",
+    "    \")\",\n",
     ")"
    ],
    "id": "cdcdded7-1265-4f32-8b1f-334dffb813c0",
@@ -220,9 +223,9 @@
    "outputs": [],
    "cell_type": "code",
    "source": [
-    "macro ma(ex)\n",
+    "macro ma(ex2)\n",
     "    # This is not an `Expr` but just a `String`.\n",
-    "    \"ex\"\n",
+    "    \"ex2\"\n",
     "end\n",
     "println(\n",
     "    (@macroexpand @ma 1 + 2),\n",
@@ -230,8 +233,9 @@
     "    typeof(@macroexpand @ma 1 + 2),\n",
     "    \" THAT EVALUATES TO \",\n",
     "    (@ma 1 + 2),\n",
-    "    \" OF TYPE \",\n",
+    "    \" (\",\n",
     "    typeof(@ma 1 + 2),\n",
+    "    \")\",\n",
     ")"
    ],
    "id": "ee6849d3-69b6-4563-8005-13d19d14361d",
@@ -242,9 +246,9 @@
    "outputs": [],
    "cell_type": "code",
    "source": [
-    "macro ma(ex)\n",
-    "    # This is a `String` that has interpolated `ex`.\n",
-    "    \"$ex\"\n",
+    "macro ma(ex2)\n",
+    "    # This is a `String` that has interpolated `ex2`.\n",
+    "    \"$ex2\"\n",
     "end\n",
     "println(\n",
     "    (@macroexpand @ma 1 + 2),\n",
@@ -252,8 +256,9 @@
     "    typeof(@macroexpand @ma 1 + 2),\n",
     "    \" THAT EVALUATES TO \",\n",
     "    (@ma 1 + 2),\n",
-    "    \" OF TYPE \",\n",
+    "    \" (\",\n",
     "    typeof(@ma 1 + 2),\n",
+    "    \")\",\n",
     ")"
    ],
    "id": "cbdcb9e5-7d75-4a02-85cd-1a3da051bd3a",
@@ -264,10 +269,10 @@
    "outputs": [],
    "cell_type": "code",
    "source": [
-    "macro ma(ex)\n",
-    "    # This `Expr` contains a `String` that plans to interpolate `ex`.\n",
+    "macro ma(ex2)\n",
+    "    # This `Expr` contains a `String` that plans to interpolate `ex2`.\n",
     "    quote\n",
-    "        \"$ex\"\n",
+    "        \"$ex2\"\n",
     "    end\n",
     "end\n",
     "try\n",
@@ -277,8 +282,9 @@
     "        typeof(@macroexpand @ma 1 + 2),\n",
     "        \" THAT EVALUATES TO \",\n",
     "        (@ma 1 + 2),\n",
-    "        \" OF TYPE \",\n",
+    "        \" (\",\n",
     "        typeof(@ma 1 + 2),\n",
+    "        \")\",\n",
     "    )\n",
     "catch er\n",
     "    println(er)\n",
@@ -292,10 +298,10 @@
    "outputs": [],
    "cell_type": "code",
    "source": [
-    "macro ma(ex)\n",
-    "    # This `Expr` contains a `String` that has interpolated `ex`.\n",
+    "macro ma(ex2)\n",
+    "    # This `Expr` contains a `String` that has interpolated `ex2`.\n",
     "    quote\n",
-    "        \"$($ex)\"\n",
+    "        \"$($ex2)\"\n",
     "    end\n",
     "end\n",
     "println(\n",
@@ -304,8 +310,9 @@
     "    typeof(@macroexpand @ma 1 + 2),\n",
     "    \" THAT EVALUATES TO \",\n",
     "    (@ma 1 + 2),\n",
-    "    \" OF TYPE \",\n",
+    "    \" (\",\n",
     "    typeof(@ma 1 + 2),\n",
+    "    \")\",\n",
     ")"
    ],
    "id": "42d0a1de-b45d-4dba-b5ed-1be76a88469e",
@@ -326,10 +333,10 @@
    "source": [
     "variable = \"Important information\"\n",
     "\n",
-    "macro ma(ex)\n",
+    "macro ma(ex2)\n",
     "    quote\n",
     "        variable = \"LOL\"\n",
-    "        $ex\n",
+    "        $ex2\n",
     "    end\n",
     "end\n",
     "@ma 1 + 2\n",
@@ -345,10 +352,10 @@
    "source": [
     "variable = \"Important information\"\n",
     "\n",
-    "macro ma(ex)\n",
+    "macro ma(ex2)\n",
     "    esc(quote\n",
     "        variable = \"LOL\"\n",
-    "        $ex\n",
+    "        $ex2\n",
     "    end)\n",
     "end\n",
     "@ma 1 + 2\n",
@@ -363,8 +370,8 @@
    "cell_type": "code",
    "source": [
     "va = 1\n",
-    "macro zero_variable(ex)\n",
-    "    esc(:(va = 0; $ex))\n",
+    "macro zero_variable(ex2)\n",
+    "    esc(:(va = 0; $ex2))\n",
     "end\n",
     "println(@zero_variable 1 + 2)\n",
     "va"
@@ -378,10 +385,10 @@
    "cell_type": "code",
    "source": [
     "va = 1\n",
-    "macro zero_variable(ex)\n",
+    "macro zero_variable(ex2)\n",
     "    esc(quote\n",
     "        va = 0\n",
-    "        $ex\n",
+    "        $ex2\n",
     "    end)\n",
     "end\n",
     "println(@zero_variable 1 + 2)\n",
