Zzz. Next, plot.

--- a/code/30.esc.ipynb
+++ b/code/30.esc.ipynb
@@ -19,8 +19,11 @@
    "cell_type": "code",
    "source": [
     "module HotModule\n",
+    "\n",
     "macro babe(ar)\n",
     "    quote\n",
+    "\n",
+    "        # Everything (including interpolated ones) is `gensym`ed.\n",
     "\n",
     "        try\n",
     "            # `gensym(ar)`.\n",
@@ -73,8 +76,13 @@
     "        # `struct` names are not `gensym`ed.\n",
     "        struct ar end\n",
     "\n",
+    "        # Again, everything is `gensym`ed.\n",
+    "        # I was surprised to find out that `$ar` becomes `GENSYM(SexyArgument).`\n",
+    "\n",
     "    end\n",
+    "    # Escaping `quote` returns everything within as they are.\n",
     "end\n",
+    "\n",
     "end\n",
     "\n",
     "@macroexpand HotModule.@babe SexyArgument"
