Plotted; Next make 'ha' special

--- a/code/30.esc.ipynb
+++ b/code/30.esc.ipynb
@@ -4,11 +4,11 @@
    "outputs": [],
    "cell_type": "code",
    "source": [
-    "function SexyArgument()\n",
+    "function BeSexy()\n",
     "    println(\"Sexy boy in `Main`.\")\n",
     "end\n",
     "\n",
-    "SexyArgument()"
+    "BeSexy()"
    ],
    "id": "b3d13309-5593-480e-a4e6-d25550009881",
    "metadata": {},
@@ -20,7 +20,7 @@
    "source": [
     "module HotModule\n",
     "\n",
-    "macro babe(ar)\n",
+    "macro babe1(ar)\n",
     "    quote\n",
     "\n",
     "        # Everything (including interpolated ones) is `gensym`ed.\n",
@@ -34,19 +34,19 @@
     "        end\n",
     "\n",
     "        try\n",
-    "            # `gensym(SexyArgument)`.\n",
+    "            # `gensym(BeSexy)`.\n",
     "            $ar\n",
     "            function $ar() end\n",
     "        catch\n",
     "            println(\n",
-    "                \"`gensym(SexyArgument)` is one-off and guranteed to not exist, so accessing it errors.\",\n",
+    "                \"`gensym(BeSexy)` is one-off and guranteed to not exist, so accessing it errors.\",\n",
     "            )\n",
     "        end\n",
     "\n",
-    "        # Non-`gensym`ed `ar` is evaluated to be `Main.SexyArgument`.\n",
+    "        # Non-`gensym`ed `ar` is evaluated to be `Main.BeSexy`.\n",
     "        $(esc(ar))\n",
     "        function $(esc(ar))()\n",
-    "            println(\"Sexy girl in `HotModule`.\")\n",
+    "            println(\"Sexy babe(1) in `HotModule`.\")\n",
     "        end\n",
     "\n",
     "        try\n",
@@ -62,7 +62,7 @@
     "        end\n",
     "\n",
     "        try\n",
-    "            # `gensym(esc)(gensym(SexyArgument))`\n",
+    "            # `gensym(esc)(gensym(BeSexy))`\n",
     "            esc($ar)\n",
     "            ## Function names can not have two `Symbol`s; syntax error.\n",
     "            #function esc($ar)() end\n",
@@ -70,24 +70,40 @@
     "            println(\n",
     "                \"`esc` is not consider as function `esc()`, but variable `gensym(esc)`, which does not exist.\",\n",
     "            )\n",
-    "            println(\"`\\$ar` is interpolated as `gensym(SexyArgument)`.\")\n",
+    "            println(\"`\\$ar` is interpolated as `gensym(BeSexy)`.\")\n",
     "        end\n",
     "\n",
     "        # `struct` names are not `gensym`ed.\n",
     "        struct ar end\n",
     "\n",
     "        # Again, everything is `gensym`ed.\n",
-    "        # I was surprised to find out that `$ar` becomes `GENSYM(SexyArgument).`\n",
+    "        # I was surprised to find out that `$ar` becomes `GENSYM(BeSexy).`\n",
     "\n",
     "    end\n",
+    "end\n",
+    "\n",
+    "macro babe2(ar)\n",
     "    # Escaping `quote` returns everything within as they are.\n",
+    "    esc(quote\n",
+    "\n",
+    "        esc(ar)\n",
+    "\n",
+    "        ar\n",
+    "        function ar() end\n",
+    "\n",
+    "        $ar\n",
+    "        function $ar()\n",
+    "            println(\"Sexy babe(2) in `HotModule`.\")\n",
+    "        end\n",
+    "\n",
+    "        struct ar end\n",
+    "\n",
+    "    end)\n",
     "end\n",
     "\n",
-    "end\n",
-    "\n",
-    "@macroexpand HotModule.@babe SexyArgument"
+    "end"
    ],
-   "id": "e0bcf1ad-77a5-44cf-963b-1fbab1e0b15e",
+   "id": "4825401b-3d37-4561-a48a-04a43f3a850d",
    "metadata": {},
    "execution_count": null
   },
@@ -95,9 +111,9 @@
    "outputs": [],
    "cell_type": "code",
    "source": [
-    "HotModule.@babe SexyArgument"
+    "@macroexpand HotModule.@babe1 BeSexy"
    ],
-   "id": "4a28e37a-7b95-4b2f-a192-041b65215af9",
+   "id": "b8947094-afbb-4279-a4d1-f92279b9b166",
    "metadata": {},
    "execution_count": null
   },
@@ -105,11 +121,37 @@
    "outputs": [],
    "cell_type": "code",
    "source": [
-    "SexyArgument()\n",
+    "HotModule.@babe1 BeSexy\n",
+    "\n",
+    "BeSexy()\n",
     "\n",
     "ar()"
    ],
-   "id": "1f2156f5-565d-4f5e-b4a7-18813fa07002",
+   "id": "a6e9c324-43e1-490c-9c00-6affe58e8bc5",
+   "metadata": {},
+   "execution_count": null
+  },
+  {
+   "outputs": [],
+   "cell_type": "code",
+   "source": [
+    "@macroexpand HotModule.@babe2 BeSexy"
+   ],
+   "id": "a99a741a-a3a5-46a8-b2f5-e31da9ba2ff3",
+   "metadata": {},
+   "execution_count": null
+  },
+  {
+   "outputs": [],
+   "cell_type": "code",
+   "source": [
+    "HotModule.@babe2 BeSexy\n",
+    "\n",
+    "BeSexy()\n",
+    "\n",
+    "ar()"
+   ],
+   "id": "5d8904bd-c007-41eb-afd1-10beebe04c53",
    "metadata": {},
    "execution_count": null
   }
